--- a/index.html
+++ b/index.html
@@ -11,37 +11,48 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
         rel="stylesheet">
-    <title>dev.Finace$</title>
+    <title>dev.finace$</title>
 </head>
+
+<h1 id="logo"></h1>
 
 <body>
     <header>
-        <h1 id="logo">dev.Finance$</h1>
+        <h1 id="logo"><img src="./assets/logo.svg" alt="Logo dev.finance$"></h1>
     </header>
 
     <main class="container">
 
         <section id="balance">
-            <h2>Balanço</h2>
+            <h2 class="sr-only">Balanço</h2>
 
             <div class="card">
-                <h3>Entradas</h3>
+                <h3>
+                    <span>Entradas</span>
+                    <img src="./assets/income.svg" alt="Imagem de entradas">
+                </h3>
                 <p>R$ 5.000,00</p>
             </div>
 
             <div class="card">
-                <h3>Saídas</h3>
+                <h3>
+                    <span>Saídas</span>
+                    <img src="./assets/expense.svg" alt="Imagem de saídas">
+                </h3>
                 <p>R$ 2.000,00</p>
             </div>
 
             <div class="card total">
-                <h3>Total</h3>
+                <h3>
+                    <span>Total</span>
+                    <img src="./assets/total.svg" alt="Imagem de total">
+                </h3>
                 <p>R$ 3.000,00</p>
             </div>
         </section>
 
         <section id="transaction">
-            <h2>Transações</h2>
+            <h2 class="sr-only">Transações</h2>
 
             <table id="data-table">
                 <thead>
@@ -77,7 +88,7 @@
 
 
     <footer>
-        <p>dev.Finance$</p>
+        <p>dev.finance$</p>
     </footer>
 
 
