--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
     <main class="container">
 
         <section id="balance">
+
             <h2 class="sr-only">Balanço</h2>
 
             <div class="card">
                 <h3>
                     <span>Entradas</span>
-                    <img src="./assets/income.svg" alt="Imagem de entradas">
+                    <img src="./assets/income+.svg" alt="Imagem de entradas">
                 </h3>
                 <p>R$ 5.000,00</p>
             </div>
@@ -37,7 +38,7 @@
             <div class="card">
                 <h3>
                     <span>Saídas</span>
-                    <img src="./assets/expense.svg" alt="Imagem de saídas">
+                    <img src="./assets/expense-.svg" alt="Imagem de saídas">
                 </h3>
                 <p>R$ 2.000,00</p>
             </div>
@@ -49,14 +50,17 @@
                 </h3>
                 <p>R$ 3.000,00</p>
             </div>
+
         </section>
 
         <section id="transaction">
+
             <h2 class="sr-only">Transações</h2>
 
-            <a href="#" class="button new">+ Nova Transação</a>
+            <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
 
             <table id="data-table">
+
                 <thead>
                     <tr>
                         <th>Descrição</th>
@@ -65,6 +69,7 @@
                         <th></th>
                     </tr>
                 </thead>
+
                 <tbody>
                     <tr>
                         <td class="description">Luz</td>
@@ -91,21 +96,54 @@
                         </td>
                     </tr>
                 </tbody>
+
             </table>
+
         </section>
 
 
     </main>
 
+    <div class="modal-overlay ">
+        <div class="modal">
+            <div class="form">
+                <h2>Nova Transação</h2>
+                <form action="">
+                    <div class="input-group">
+                        <label class="sr-only" for="description">Descrição</label>
+                        <input type="text" id="description" name="description" placeholder="Descrição" />
+                    </div>
 
+                    <div class="input-group">
+                        <label class="sr-only" for="amount">Valor</label>
+                        <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" />
+                        <small class="help">
+                            Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais
+                        </small>
+                    </div>
+
+                    <div class="input-group">
+                        <label class="sr-only" for="date">Descrição</label>
+                        <input type="date" id="date" name="date" placeholder="01/01/2022" />
+                    </div>
+
+                    <div class="input-group actions">
+                        <a href="#" onclick="Modal.close()" class="button cancel">Cancelar</a>
+                        <button>Salvar</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <p>dev.finance$</p>
     </footer>
 
+    <script src="./script.js">
 
-
-
+    </script>
 
 </body>
 
